--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -10,7 +10,7 @@
     <h1 class="text-warning">{{ event.title }}</h1>
     <p class="mb-1">{{ event.location }}</p>
     <p class="mb-1">⭐ {{ event.rating }}</p>
-    <p class="lead">£{{ event.cost }}</p>
+    <p class="lead">👻 {{ event.cost|floatformat:0  }} souls</p>
     <p>{{ event.description }}</p>
 
     <a href="{% url 'purchase' event.pk %}" class="btn btn-orange btn-lg">Purchase</a>
