--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,3 +1,28 @@
+/* Font import */
+@import url('https://fonts.googleapis.com/css2?family=Notable&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Metal+Mania&family=Notable&display=swap');
+
+:root {
+    --title-font: "Birdie", sans-serif;
+    --background: rgb(27, 27, 29);
+    --background-accent: rgb(33, 37, 41);
+    --primary-color: #353b5f;
+    --secondary-color: rgb(132, 142, 150);
+    --accent-color: #FE4701;
+    --link-color: #f6a824;
+
+    --background-new: #122220;
+    /* accent: F46036 */
+}
+
+@font-face {
+    font-family: "Birdie";
+    src: url("../fonts/Birdie.otf") format("opentype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 /* Global CSS */
 html,
 body {
@@ -9,8 +34,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: #0d0c13;
-    color: #eee;
+    background: var(--background);
+    color: var(--primary-color);
 }
 
 main {
@@ -23,13 +48,19 @@ main {
 }
 
 .navbar {
-    background: #16151f;
+    background: var(--background-accent);
 }
 
 a,
     .nav-link,
     .navbar-brand {
-    color: #f6a824 !important;
+    color: var(--accent-color);
+}
+
+a, 
+    .nav-link:hover,
+    .navbar-brand:hover {
+    color: var(--link-color);
 }
 
 .card {
@@ -39,26 +70,32 @@ a,
 }
 
 .btn-orange {
-    background-color: #f6a824;
+    background-color: var(--link-color);
     color: #1f1e2b !important;
     border: none;
     font-weight: 600;
 }
 
 .btn-orange:hover {
-    background-color: #d8900f;
+    background-color: var(--link-color);
     color: #fff !important;
     transition: background-color 0.2s ease;
 }
 
 .hover-orange:hover {
-    color: #f6a824 !important;
+    color: var(--link-color);
+}
+
+.btn-outline-warning {
+    color: var(--accent-color);
+    border: 2px solid var(--accent-color);
 }
 
 .btn-outline-warning:hover{
-    background-color: #d8900f;
+    background-color: var(--link-color);
     color: #ffffff !important;
-    transition: background-color 0.2s ease;
+    border: 2px solid var(--link-color);
+    transition: background-color 0.3s ease;
 }
 
 .modal-content {
@@ -91,3 +128,26 @@ a,
   object-fit: cover;
 }
 
+/* Styling classes */
+.title-heading {
+    font-family: var(--title-font);
+    color: var(--accent-color);
+    letter-spacing: 1px;
+    font-size: 2rem;
+}
+
+.title-xl {
+    font-size: 7rem;
+}
+
+.sub-heading {
+    color: var(--secondary-color);
+}
+
+.accent-color {
+    color: var(--accent-color);
+}
+
+/* imgs */
+/* .goblin-hero {
+} */
