Update title in navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="/">🎃 Spooky Experiences</a>
+        <a class="navbar-brand title-heading fw-bold" href="/">GRAVE GETAWAYS</a>
 
         <button
           class="navbar-toggler"
