Add logo to navbar

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -22,13 +22,13 @@ Home • Spooky Experiences
        "></div> -->
 
   <!-- Foreground Content -->
-  <div class="container position-relative" style="z-index: 10;">
-    <div class="row align-items-center gy-4">
-      <div class="col-lg-6">
+  <div class="container-fluid position-relative" style="z-index: 10;">
+    <div class="row align-items-center">
+      <div class="col-lg-7">
         <img src="static\images\goblin-hero.webp" alt="image of a goblin cooking" class="img-fluid goblin-hero">
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-5">
         <h1 class="display-5 fw-bold mb-3 title-heading title-xl">GRAVE GETAWAYS</h1>
         <p class="lead mb-4 sub-heading">
           Join us beyond the veil — a curated collection of haunted events, paranormal tours, and otherworldly adventures.
