--- a/static/css/site.css
+++ b/static/css/site.css
@@ -49,6 +49,7 @@ main {
 
 .navbar {
     background: var(--background-accent);
+    overflow: visible;
 }
 
 a,
@@ -117,12 +118,6 @@ a,
     box-shadow: 0 0 20px rgba(246, 168, 36, 0.15);
 }
 
-
-@media (min-width: 992px) {
-    .mx-lg-n150 { margin-left: -150px !important; margin-right: -150px !important; }
-    .mt-lg-n50 { margin-top: -50px !important; }
-  }
-
   /* Make sure images fit nicely in the ratio box */
 .object-fit-cover {
   object-fit: cover;
@@ -133,7 +128,7 @@ a,
     font-family: var(--title-font);
     color: var(--accent-color);
     letter-spacing: 1px;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .title-xl {
@@ -148,6 +143,25 @@ a,
     color: var(--accent-color);
 }
 
-/* imgs */
-/* .goblin-hero {
-} */
+/* logo */
+.navbar-brand {
+    position: relative;
+    overflow: visible;
+}
+.navbar-brand img {
+    height: 125px;
+    width: auto;
+    position: relative;
+    top: 2px;
+    margin-right: -30px;
+}
+
+/* Media queries */
+@media (min-width: 992px) {
+    .mx-lg-n150 { margin-left: -150px !important; margin-right: -150px !important; }
+    .mt-lg-n50 { margin-top: -50px !important; }
+
+    .navbar {
+        min-height: 85px;
+    }
+  }
