--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-dark">
       <div class="container">
         <a class="navbar-brand title-heading fw-bold" href="/">
-          <img src="static/images/logo-1.png" alt="logo">
+          <img src="/static/images/logo-1.png" alt="logo">
           GRAVE GETAWAYS</a>
 
         <button
