Add skeleton imgs to background

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -9,11 +9,11 @@ Home • Spooky Experiences
          style="min-height: 80vh; display: flex; align-items: center; overflow: hidden;">
 
   <!-- Background Image -->
-  <!-- <div class="position-absolute top-0 start-0 w-100 h-100"
+  <div class="position-absolute top-0 start-0 w-100 h-100 d-none d-lg-block"
        style="
-         background: url('/static/images/homepage_bg_pic.jpeg') center center / cover no-repeat;
-         z-index: -50;
-       "></div> -->
+         background: url('/static/images/background-2.webp') right center / contain no-repeat;
+         z-index: -50; opacity: 0.4;
+       "></div>
 
   <!-- Dark Overlay -->
   <!-- <div class="position-absolute top-0 start-0 w-100 h-100"
